; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_auto_parser.c_set_pin_targets.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_auto_parser.c_set_pin_targets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_codec = type { i32 }
%struct.hda_pintbl = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_codec*, %struct.hda_pintbl*)* @set_pin_targets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_pin_targets(%struct.hda_codec* %0, %struct.hda_pintbl* %1) #0 {
  %3 = alloca %struct.hda_codec*, align 8
  %4 = alloca %struct.hda_pintbl*, align 8
  store %struct.hda_codec* %0, %struct.hda_codec** %3, align 8
  store %struct.hda_pintbl* %1, %struct.hda_pintbl** %4, align 8
  br label %5

5:                                                ; preds = %19, %2
  %6 = load %struct.hda_pintbl*, %struct.hda_pintbl** %4, align 8
  %7 = getelementptr inbounds %struct.hda_pintbl, %struct.hda_pintbl* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %5
  %11 = load %struct.hda_codec*, %struct.hda_codec** %3, align 8
  %12 = load %struct.hda_pintbl*, %struct.hda_pintbl** %4, align 8
  %13 = getelementptr inbounds %struct.hda_pintbl, %struct.hda_pintbl* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.hda_pintbl*, %struct.hda_pintbl** %4, align 8
  %16 = getelementptr inbounds %struct.hda_pintbl, %struct.hda_pintbl* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @snd_hda_set_pin_ctl_cache(%struct.hda_codec* %11, i64 %14, i32 %17)
  br label %19

19:                                               ; preds = %10
  %20 = load %struct.hda_pintbl*, %struct.hda_pintbl** %4, align 8
  %21 = getelementptr inbounds %struct.hda_pintbl, %struct.hda_pintbl* %20, i32 1
  store %struct.hda_pintbl* %21, %struct.hda_pintbl** %4, align 8
  br label %5

22:                                               ; preds = %5
  ret void
}

declare dso_local i32 @snd_hda_set_pin_ctl_cache(%struct.hda_codec*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
